k8s/tool/grafana/grafana-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
  name: grafana
spec:
  type: NodePort
  ports:
  - port: 443
    name: https
    targetPort: 3000
  selector:
    app: grafana
